--- a/db/templates/db/product.html
+++ b/db/templates/db/product.html
@@ -1,20 +1,89 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-product
-{{ product.name }}
+{% include 'db/Header.html' %}
 
 
-<hr/>
-{% for contract in contracts %}
-<h1>{{ contract.strHash }}</h1>
-    <br>
-{% endfor %}
+          <!-- Page Heading -->
+<div class="d-sm-flex align-items-center justify-content-between mb-4">
+    <h1 class="h3 mb-0 text-gray-800">Product Details</h1>
+    {% if sellable == 'True' %}
+        <a href="/sell/{{ product.id }}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm px-5">
+            <i class="fas fa-shopping-bag fa-sm text-white-50"></i>Sell
+        </a>
 
-<img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=xx">
-</body>
-</html>
+    {% endif %}
+</div>
+
+ <div class="row">
+
+     <div class="col-xl-3 col-md-6 mb-4">
+         <div class="card border-left-primary shadow h-100 py-2">
+             <div class="card-body">
+                 <div class="row no-gutters align-items-center">
+                     <div class="col mr-2">
+                      <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Name</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">{{ product.name }}</div>
+                     </div>
+                    <div class="col-auto">
+                      <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                    </div>
+                 </div>
+             </div>
+         </div>
+     </div>
+
+     <div class="col-xl-3 col-md-6 mb-4">
+         <div class="card border-left-success shadow h-100 py-2">
+             <div class="card-body">
+                 <div class="row no-gutters align-items-center">
+                     <div class="col mr-2">
+                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Quantity</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">{{ product.count }}</div>
+                     </div>
+                    <div class="col-auto">
+                      <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                    </div>
+                 </div>
+             </div>
+         </div>
+     </div>
+
+     <div class="col-xl-3 col-md-6 mb-4">
+         <div class="card border-left-success shadow h-100 py-2">
+             <div class="card-body">
+                 <div class="row no-gutters align-items-center">
+                     <div class="col mr-2">
+                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Quantity</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">{{ product.count }}</div>
+                     </div>
+                    <div class="col-auto">
+                      <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                    </div>
+                 </div>
+             </div>
+         </div>
+     </div>
+
+
+
+
+</div>
+
+            <div class="card shadow mb-4">
+                <div class="card-header py-3">
+                  <h6 class="m-0 font-weight-bold text-primary">Add new Product</h6>
+                </div>
+                <div class="card-body">
+                    product
+                    {{ product.name }}
+                    <hr/>
+                    {% for contract in contracts %}
+                        <h1>{{ contract.strHash }}</h1>
+                        <br>
+                    {% endfor %}
+
+                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=xx">
+
+                </div>
+              </div>
+
+
+{% include 'db/Footer.html' %}
