--- a/db/templates/db/product.html
+++ b/db/templates/db/product.html
@@ -150,7 +150,7 @@
         <!-- Card Body -->
         <div class="card-body">
 
-            <img width="100%" height="auto" src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=http://127.0.0.1:8000/products/2/">
+            <img width="100%" height="auto" src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=http://194.135.84.18/products/{{ product.id }}/">
 
 
         </div>
